--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "bootstrap": "^5.1.3",
+    "json-server": "^0.17.0",
     "vue": "^3.2.25",
     "vue-router": "^4.0.14"
   },
