--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^0.27.1",
     "bootstrap": "^5.1.3",
     "json-server": "^0.17.0",
     "vue": "^3.2.25",
+    "vue-axios": "^3.4.1",
     "vue-router": "^4.0.14"
   },
   "devDependencies": {
